# Yammy

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  README.md  package-lock.json
Yammy-AI/: .gitignore  app.py  config.py  main.py  package-lock.json  pyproject.toml  requirements.txt
Yammy-AI/controller/: baseballdata.py  items.py
Yammy-BE/yammy/: .env.development.local  .gitignore  Dockerfile  alter_toss_id.sql  build.gradle  create_betting_table.sql  settings.gradle
Yammy-FE/: Dockerfile  README.md  index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
Yammy-FE/src/: App.css  App.jsx  index.css  main.jsx
Yammy-FE/src/api/: apiClient.js
Yammy-FE/src/auth/: ChangePasswordPage.jsx  DeleteAccountPage.jsx  KakaoCallbackPage.jsx  LoginPage.jsx  SignupPage.jsx
Yammy-FE/src/auth/api/: authApi.js  kakaoAuthApi.js
Yammy-FE/src/match/: MatchResultPage.jsx
Yammy-FE/src/mypage/: MyPage.jsx
Yammy-FE/src/predict/: PredictPage.jsx
Yammy-FE/src/router/: AdminRoute.jsx  AppRouter.jsx  ProtectedRoute.jsx  TeamRequiredRoute.jsx
Yammy-FE/src/sns/: SNSPage.jsx
Yammy-FE/src/stores/: authStore.js
Yammy-FE/src/useditem/: UsedItemPage.jsx
Yammy-FE/src/utils/: teamLogos.js
Yammy-FE/src/withdrawal/: WithdrawalHistoryPage.jsx  WithdrawalPage.jsx
exec/: 1. 빌드 및 배포 가이드.md  2. 서비스 정보 상세.md  3. Yammy_DB_Dump.sql
exec/.env 파일 (예시)/: .env.backend.example  .env.frontend.example
exec/.yml 파일/: prod_application.yml  test_application.yml
exec/EC2 서버 파일/compose/: docker-compose.yml
exec/EC2 서버 파일/nginx/: nginx.conf
(+326 files in other folders)
